--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="uk">Портфоліо</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Top Line-->
     <header>
       <nav>
-        <a href="/"><span>Web</span>Studio</a>
+        <a href="/" class="logo-web"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="/">Contacts</a></li>
         </ul>
       </nav>
@@ -30,120 +34,139 @@
     <main>
       <!--Section-1-->
       <section>
-        <h1>Effective Solutions<br />Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1><code>cursor</code>Filtr</h1>
+        <div class="pointer">pointer</div>
+        <ul class="button">
+          <li>
+           <button class="btn" type="button">All</button>
+          </li>
+          <li>
+           <button class="btn" type="button">website</button>
+          </li>
+          <li>
+           <button class="btn" type="button">art</button>
+          </li>
+          <li>
+           <button class="btn" type="button">design</button>
+          </li>
+          <li>
+           <button class="btn" type="button">marketing</button>
+          </li>
+        </ul>
+        <!--buttons-->
+  
+<a class="btn" href="./help.html">допомога</a>
+        <ul class="social-links">
+  <li><a class="link" href="https://twitter.com">Twitter</a></li>
+  <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
+  <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
+</ul>
       </section>
-      <!--Section-2-Policy-->
+      <!--Section-Banking-->
       <section>
         <h2>Policy</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business<br />
-              problem to walk away with the<br />
-              perfect and creative solution.
-            </p>
+            <img
+              src="./imajes/banking-app.jpg"
+              width="360"
+              height="300"
+              alt="banking-app"
+            />
+            <h3>Banking App Interface Concep</h3>
+            <p>App</p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the<br />
-              brand's audience for the best price<br />
-              within the shortest possible time.
-            </p>
+            <img
+              src="./imajes/cashless-payment.jpg"
+              width="360"
+              height="300"
+              alt="cashless-payment"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that<br />
-              present the strongest digital growth<br />
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital<br />
-              experiences. We bring forth a deep<br />
-              passion for problem-solving.
-            </p>
+             <li>
+            <img
+              src="./imajes/mediation-app.jpg"
+              width="360"
+              height="300"
+              alt="mediation-app"
+            />
+            <h3>Meditaion App</h3>
+            <p>App</p>
           </li>
         </ul>
       </section>
-      <!--Section-3-What are we doing-->
+      <!--Service-->
       <section>
-        <h2>What are we doing</h2>
+        <h2>Service</h2>
         <ul>
           <li>
             <img
-              src="./imajes\gajets\tablet.jpg"
+              src="./imajes/taxi-service.jpg"
               width="360"
               height="300"
-              alt="Tablet"
+              alt="taxi-service"
             />
-          </li>
-          <li>
-            <img
-              src="./imajes\gajets\smartphon.jpg"
-              width="360"
-              height="300"
-              alt="Smartphon"
-            />
-          </li>
-          <li>
-            <img
-              src="./imajes\gajets\laptop.jpg"
-              width="360"
-              height="300"
-              alt="Laptop"
-            />
-          </li>
-        </ul>
-      </section>
-      <!--Section-Our Team-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./imajes\emploees\mark-guerello.jpg"
-              width="264"
-              height="260"
-              alt="Mark Guerrero-Product Designer"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./imajes\emploees\tom-ford.jpg"
-              width="264"
-              height="260"
-              alt="Tom Ford-Frontend Developer"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./imajes\emploees\camila-garcia.jpg"
-              width="264"
-              height="260"
-              alt="Camila Garcia-Marketing"
-            />
-            <h3>Camila Garcia</h3>
+             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./imajes\emploees\daniel-wilson.jpg"
-              width="264"
-              height="260"
-              alt="Daniel Vilson-UI Designer"
+              src="./imajes/screen-illustration.jpg"
+              width="360"
+              height="300"
+              alt="Screen-illustrations"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+             <h3>Screen Illustrations</h3>
+             <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./imajes/online-courses.jpg"
+              width="360"
+              height="300"
+              alt="online-courses"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
+      <!--Stories-->
+      <section>
+        <h2>Stories</h2>
+         <ul>
+          <li>
+            <img
+              src="./imajes/instagram-stories.jpg"
+              width="360"
+              height="300"
+              alt="instagram-stories"
+            />
+             <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./imajes/organic food.jpg"
+              width="360"
+              height="300"
+              alt="organic food"
+            />
+             <h3>Organic Food</h3>
+             <p>Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./imajes/fresh-coffee.jpg"
+              width="360"
+              height="300"
+              alt="fresh-coffee"
+            />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
           </li>
         </ul>
       </section>
