--- a/portfolio.html
+++ b/portfolio.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title lang="uk">Портфоліо</title>/>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title lang="uk">Портфоліо</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!--Top Line-->
-    <header>
-      <nav>
-        <a href="/" class="logo-web"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+    <header class="header">
+      <div class="wrapper">
+      <div class="header-wrapper">
+      <div class="header-logo">
+        <a href="/" class="logo-link"><span>Web</span>Studio</a>
+      </div>
+      <nav class="header-nav">
+        <ul class="header-list">
+          <li class="header-item"><a href="./index.html" class="link">Studio</a></li>
+          <li class="header-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li class="header-item"><a href="/" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="connection">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li>
-          <a href="tel:+110001111111" class="contact-link"
-            >+11 (000) 111-11-11</a
-          >
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
+      </div>
+    </div>
     </header>
     <main>
-      <!--Section-1-->
-      <section>
-        <h1><code>cursor</code>Filtr</h1>
+    <!--Section-1-->
+    <div class="hero">
+      <section class="section-hero">
+        <h1 class="hero-title"><code>cursor</code>Filtr</h1>
         <div class="pointer">pointer</div>
+        <!--buttons-->
         <ul class="button">
           <li>
            <button class="btn" type="button">All</button>
@@ -52,18 +57,11 @@
            <button class="btn" type="button">marketing</button>
           </li>
         </ul>
-        <!--buttons-->
-  
-<a class="btn" href="./help.html">допомога</a>
-        <ul class="social-links">
-  <li><a class="link" href="https://twitter.com">Twitter</a></li>
-  <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
-  <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
-</ul>
-      </section>
+     </section>
+    </div>
       <!--Section-Banking-->
-      <section>
-        <h2>Policy</h2>
+      <section class="section">
+        <h2 class="section-title">Policy</h2>
         <ul>
           <li>
             <img
@@ -71,7 +69,7 @@
               width="360"
               height="300"
               alt="banking-app"
-            />
+            >
             <h3>Banking App Interface Concep</h3>
             <p>App</p>
           </li>
@@ -81,7 +79,7 @@
               width="360"
               height="300"
               alt="cashless-payment"
-            />
+            >
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
@@ -91,15 +89,15 @@
               width="360"
               height="300"
               alt="mediation-app"
-            />
+            >
             <h3>Meditaion App</h3>
             <p>App</p>
           </li>
         </ul>
       </section>
       <!--Service-->
-      <section>
-        <h2>Service</h2>
+      <section class="section">
+        <h2 class="section-title">Service</h2>
         <ul>
           <li>
             <img
@@ -107,7 +105,7 @@
               width="360"
               height="300"
               alt="taxi-service"
-            />
+            >
              <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
@@ -117,7 +115,7 @@
               width="360"
               height="300"
               alt="Screen-illustrations"
-            />
+            >
              <h3>Screen Illustrations</h3>
              <p>Design</p>
           </li>
@@ -127,15 +125,15 @@
               width="360"
               height="300"
               alt="online-courses"
-            />
+            >
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
       </section>
       <!--Stories-->
-      <section>
-        <h2>Stories</h2>
+      <section class="section">
+        <h2 class="section-title">Stories</h2>
          <ul>
           <li>
             <img
@@ -143,17 +141,17 @@
               width="360"
               height="300"
               alt="instagram-stories"
-            />
+            >
              <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
             <img
-              src="./imajes/organic food.jpg"
+              src="./imajes/organic-food.jpg"
               width="360"
               height="300"
               alt="organic food"
-            />
+            >
              <h3>Organic Food</h3>
              <p>Web Site</p>
           </li>
@@ -163,19 +161,19 @@
               width="360"
               height="300"
               alt="fresh-coffee"
-            />
+            >
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <address>
-        <a href="/"><span>Web</span>Studio</a>
-        <p>
-          Increase the flow of customers and<br />
-          sales for your business with digital<br />
+        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
+        <p class="footer-text">
+          Increase the flow of customers and<br>
+          sales for your business with digital<br>
           marketing & growth solutions.
         </p>
       </address>
