--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title lang="uk">Студія</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title lang="uk">Студія</title>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
@@ -15,7 +15,7 @@
       <div class="wrapper">
       <div class="header-wrapper">
       <div class="header-logo">
-        <a href="/" class="logo"><span>Web</span>Studio</a>
+        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
       </div>
       <nav class="header-nav">
         <ul class="header-list">
@@ -156,14 +156,12 @@
       </section>
     </main>
     <footer class="footer">
-      <address>
         <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
         <p class="footer-text">
           Increase the flow of customers and<br>
           sales for your business with digital<br>
           marketing & growth solutions.
         </p>
-      </address>
     </footer>
   </body>
 </html>
