--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       <div class="wrapper">
       <div class="header-wrapper">
       <div class="header-logo">
-        <a href="/" class="logo-link"><span>Web</span>Studio</a>
+        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
       </div>
       <nav class="header-nav">
         <ul class="header-list">
@@ -34,11 +34,9 @@
     </div>
     </header>
     <main>
-    <!--Section-1-->
-    <div class="hero">
-      <section class="section-hero">
+    <!--Section-hero-->
+    <section class="section-hero">
         <h1 class="hero-title"><code>cursor</code>Filtr</h1>
-        <div class="pointer">pointer</div>
         <!--buttons-->
         <ul class="button">
           <li>
@@ -57,10 +55,6 @@
            <button class="btn" type="button">marketing</button>
           </li>
         </ul>
-     </section>
-    </div>
-      <!--Section-Banking-->
-      <section class="section">
         <h2 class="section-title">Policy</h2>
         <ul>
           <li>
@@ -94,9 +88,7 @@
             <p>App</p>
           </li>
         </ul>
-      </section>
-      <!--Service-->
-      <section class="section">
+ <!--Service-->
         <h2 class="section-title">Service</h2>
         <ul>
           <li>
@@ -130,9 +122,7 @@
             <p>Marketing</p>
           </li>
         </ul>
-      </section>
       <!--Stories-->
-      <section class="section">
         <h2 class="section-title">Stories</h2>
          <ul>
           <li>
@@ -169,14 +159,12 @@
       </section>
     </main>
     <footer class="footer">
-      <address>
         <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
         <p class="footer-text">
           Increase the flow of customers and<br>
           sales for your business with digital<br>
           marketing & growth solutions.
         </p>
-      </address>
     </footer>
   </body>
 </html>
