--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <li class="header-item"><a href="/" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li>
-          <a href="tel:+110001111111" class="contact-link"
-            >+11 (000) 111-11-11</a>
+      <ul class="connection">
+        <li class="connection-item">
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li class="connection-item">
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
       </div>
