--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,9 @@
         </ul>
       </nav>
       <ul class="connection">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li>
+        <li  class="connection-item">
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li  class="connection-item">
           <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
         </li>
       </ul>
@@ -40,7 +41,7 @@
         <!--buttons-->
         <ul class="button">
           <li>
-           <button class="btn" type="button">All</button>
+           <button class="btn active" type="button">All</button>
           </li>
           <li>
            <button class="btn" type="button">website</button>
