--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="wrapper">
       <div class="header-wrapper">
       <div class="header-logo">
-        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
+        <a href="index.html" class="logo"><span class="web">WEB</span>STUDIO</a>
       </div>
       <nav class="header-nav">
         <ul class="header-list">
@@ -156,7 +156,7 @@
       </section>
     </main>
     <footer class="footer">
-        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
+        <a href="index.html" class="logo"><span class="web">WEB</span>STUDIO</a>
         <p class="footer-text">
           Increase the flow of customers and<br>
           sales for your business with digital<br>
