--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       <div class="wrapper">
       <div class="header-wrapper">
       <div class="header-logo">
-        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
+        <a href="index.html" class="logo"><span class="web">WEB</span>STUDIO</a>
       </div>
       <nav class="header-nav">
         <ul class="header-list">
@@ -70,7 +70,7 @@
           </li>
           <li>
             <img
-              src="./imajes/cashless-payment.jpg"
+              src="./imajes/foto from hw6.jpg"
               width="360"
               height="300"
               alt="cashless-payment"
@@ -160,7 +160,7 @@
       </section>
     </main>
     <footer class="footer">
-        <a href="index.html" class="logo"><span class="web">Web</span>Studio</a>
+        <a href="index.html" class="logo"><span class="web">WEB</span>STUDIO</a>
         <p class="footer-text">
           Increase the flow of customers and<br>
           sales for your business with digital<br>
