--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
   <title lang="uk">Портфоліо</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
