HW-02 was correced
HW-02 was corrected in accordance with mentor's mentions on 09.11.22

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
       <!--Section-Policy-->
       <section class="section">
-        <h2 class="section-title">Policy</h2>
+        <h2 hidden class="section-title">Policy</h2>
         <ul class="policy-list">
           <li>
             <h3 class="title">Strategy</h3>
