--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
            <button class="btn" type="button">marketing</button>
           </li>
         </ul>
-        <h2 class="section-title">Policy</h2>
-        <ul>
+        <h2 hidden class="section-title">Policy</h2>
+        <ul class="images">
           <li>
             <img
               src="./imajes/banking-app.jpg"
@@ -91,7 +91,7 @@
           </li>
         </ul>
  <!--Service-->
-        <h2 class="section-title">Service</h2>
+        <h2 hidden class="section-title">Service</h2>
         <ul>
           <li>
             <img
@@ -125,7 +125,7 @@
           </li>
         </ul>
       <!--Stories-->
-        <h2 class="section-title">Stories</h2>
+        <h2 hidden class="section-title">Stories</h2>
          <ul>
           <li>
             <img
@@ -139,7 +139,7 @@
           </li>
           <li>
             <img
-              src="./imajes/organic-food.jpg"
+              src="./imajes/organic food.jpg"
               width="360"
               height="300"
               alt="organic food"
