--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <nav class="header-nav">
         <ul class="header-list">
-          <li class="header-item"><a href="./index.html" class="link-current">Studio</a></li>
+          <li class="header-item"><a href="./index.html" class="link">Studio</a></li>
           <li class="header-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
           <li class="header-item"><a href="/" class="link">Contacts</a></li>
         </ul>
