--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
           <li class="header-item"><a href="/" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <ul class="connection">
+      <ul class="connection-list">
         <li  class="connection-item">
           <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li  class="connection-item">
